<resources>
    <string name="app_name">Yummy Planner</string>
    <string name="yummy_planner">YummyPlanner</string>
    <string name="slogen">Plan it. Love it. Eat it.</string>
    <string name="lets_get_cooking">Let\'s get cooking!</string>
    <string name="meal_planning_made_happy">Meal planning made happy</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">You will be signed out.\nDo you want to continue?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="email_hint">example@exmple.com</string>
    <string name="password">Password</string>
    <string name="passHint">**********</string>
    <string name="or_connect_with">or connect with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="google_sign_in_cancelled">Google sign-in was cancelled</string>
    <string name="join_our_family">Join our Family!</string>
    <string name="login_required_title">Login required</string>
    <string name="login_required_message">Please login to use this feature.</string>
    <string name="login_required_dialog_message">Please login or signup to use this feature.</string>
    <string name="login_or_signup">Login / Sign Up</string>
    <string name="unlock_favorites_title">Unlock Favorites</string>
    <string name="unlock_favorites_message">Login or signup to save and manage favorite meals.</string>
    <string name="unlock_planner_title">Unlock Planner</string>
    <string name="unlock_planner_message">Login or signup to add meals to your plan.</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="planner">Planner</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="signed_in_as">Signed in as</string>
    <string name="guest_mode">You are using guest mode</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="hi_there">Hi there!</string>
    <string name="ready_to_cook">Ready to cook?</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="popular_meals">Popular Meals</string>
    <string name="view_recipe">View Recipe</string>
    <string name="what_you_need">What you need</string>
    <string name="let_s_cook">Let\'s cook!</string>
    <string name="video">Video</string>
    <string name="my_favorites">My Favorites</string>
    <string name="remove">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">cancel</string>
    <string name="add_to_plan">Add to Plan</string>
    <string name="add_to_fav_success_msg">Meal saved successfully</string>
    <string name="add_to_plan_success_msg">Meal added successfully</string>
    <string name="remove_from_fav_msg">This meal will be removed.\nDo you want to continue?</string>
    <string name="remove_from_plan_msg">This meal will be removed.\nDo you want to continue?</string>
    <string name="current_week">Current Week</string>
    <string name="no_meals_for_this_day">No meals for this day</string>
    <string name="search_hint">What are you craving?</string>
    <string name="categories">Categories</string>
    <string name="countries">Countries</string>
    <string name="ingredients">Ingredients</string>
    <string name="meals">Meals</string>
</resources>
