<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/exploreFragment"
        android:icon="@drawable/explore_icon"
        android:title="@string/explore" />
    <item
        android:id="@+id/plannerFragment"
        android:icon="@drawable/planner_icon"
        android:title="@string/planner" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/favourite_icon"
        android:title="@string/favorites" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile" />
</menu>
